--- a/web3.html
+++ b/web3.html
@@ -3,6 +3,17 @@
 <head>
   <title>hello world</title>
   <meta charset="utf-8">
+  <p>
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=UA-77506783-3"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'UA-77506783-3');
+</script>  
+  </p>
 </head>
 <body>
   <h1><a href="index.html">WEBn practice</a></h1>
