--- a/1.html
+++ b/1.html
@@ -16,7 +16,7 @@
   </p>
 </head>
 <body>
-  <h1><a href="index.html">WEBn practice</a></h1>
+  <h1><a href="index.html"><font color="red">WEBn practice</font></a></h1>
   <ol>
     <li><a href="1.html"><font color="gray">HTML</font></a></li>
     <li><a href="2.html"><font color="pink">CSS</font></a></li>
