--- a/1.html
+++ b/1.html
@@ -14,14 +14,27 @@
   gtag('config', 'UA-77506783-3');
 </script>
   </p>
+  <style>
+    a {
+      color:black;
+    }
+  </style>
 </head>
 <body>
+    <h1><a href="index.html">WEBn practice</a></h1>
+  <ol>
+    <li><a href="1.html">HTML</a></li>
+    <li><a href="2.html">CSS</a></li>
+    <li><a href="3.html">JavaScript</a></li>
+  </ol>
+  <!--
   <h1><a href="index.html"><font color="red">WEBn practice</font></a></h1>
   <ol>
     <li><a href="1.html"><font color="gray">HTML</font></a></li>
     <li><a href="2.html"><font color="pink">CSS</font></a></li>
     <li><a href="3.html"><font color="skyblue">JavaScript</font></a></li>
   </ol>
+  -->
   <h2>HTML</h2>
   <p>
     <iframe src="https://player.vimeo.com/video/268661843" width="640" height="360" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
