--- a/1.html
+++ b/1.html
@@ -16,7 +16,7 @@
   </p>
   <style>
     a {
-      color:black;
+      color:skyblue;
     }
   </style>
 </head>
@@ -24,7 +24,7 @@
     <h1><a href="index.html">WEBn practice</a></h1>
   <ol>
     <li><a href="1.html">HTML</a></li>
-    <li><a href="2.html">CSS</a></li>
+    <li><a href="2.html" style="color:red">CSS</a></li>
     <li><a href="3.html">JavaScript</a></li>
   </ol>
   <!--
