--- a/1.html
+++ b/1.html
@@ -17,6 +17,7 @@
   <style>
     a {
       color:skyblue;
+      text-decoration: none;
     }
   </style>
 </head>
@@ -24,7 +25,7 @@
     <h1><a href="index.html">WEBn practice</a></h1>
   <ol>
     <li><a href="1.html">HTML</a></li>
-    <li><a href="2.html" style="color:red">CSS</a></li>
+    <li><a href="2.html" style="color:red;text-decoration:underline">CSS</a></li>
     <li><a href="3.html">JavaScript</a></li>
   </ol>
   <!--
