--- a/1.html
+++ b/1.html
@@ -19,6 +19,10 @@
       color:skyblue;
       text-decoration: none;
     }
+    h1 {
+      font size:50px;
+      text align:center;
+    }
   </style>
 </head>
 <body>
