--- a/1.html
+++ b/1.html
@@ -20,8 +20,8 @@
       text-decoration: none;
     }
     h1 {
-      font size:50px;
-      text align:center;
+      font-size:large;
+      text-align:center;
     }
   </style>
 </head>
