--- a/1.html
+++ b/1.html
@@ -20,7 +20,7 @@
       text-decoration: none;
     }
     h1 {
-      font-size: large;
+      font-size: xx-large;
       text-align: center;
     }
   </style>
