--- a/2.html
+++ b/2.html
@@ -14,12 +14,25 @@
   gtag('config', 'UA-77506783-3');
 </script>
   </p>
+  <style>
+    a {
+      color: black;
+      text-decoration: none;
+    }
+    .saw{
+      color: red;
+    }
+    h1 {
+      font-size: 45px;
+      text-align: center;
+    }
+  </style>
 </head>
 <body>
   <h1><a href="index.html">WEBn practice</a></h1>
   <ol>
-    <li><a href="1.html">HTML</a></li>
-    <li><a href="2.html">CSS</a></li>
+    <li><a href="1.html" class="saw">HTML</a></li>
+    <li><a href="2.html" class="saw">CSS</a></li>
     <li><a href="3.html">JavaScript</a></li>
   </ol>
   <h2>CSS</h2>
