--- a/2.html
+++ b/2.html
@@ -16,8 +16,11 @@
   </p>
   <style>
     a {
-      color:black;
+      color:gray;
       text-decoration: none;
+    }
+    #active {
+      color:yellow;
     }
     .saw{
       color:red;
@@ -32,7 +35,7 @@
   <h1><a href="index.html">WEBn practice</a></h1>
   <ol>
     <li><a href="1.html" class="saw">HTML</a></li>
-    <li><a href="2.html" class="saw">CSS</a></li>
+    <li><a href="2.html" class="saw" id="active">CSS</a></li>
     <li><a href="3.html">JavaScript</a></li>
   </ol>
   <h2>CSS</h2>
