--- a/3.html
+++ b/3.html
@@ -14,6 +14,15 @@
   gtag('config', 'UA-77506783-3');
 </script>  
   </p>
+  <style>
+    a {
+      color:dodgersblue;
+      text-decoration: none;
+    }
+    h1 {
+      text-align: center;
+      font-size:40px;
+    }
 </head>
 <body>
   <h1><a href="index.html">WEBn practice</a></h1>
