--- a/3.html
+++ b/3.html
@@ -23,6 +23,7 @@
       text-align: center;
       font-size:40px;
     }
+  </style>
 </head>
 <body>
   <h1><a href="index.html">WEBn practice</a></h1>
