--- a/index.html
+++ b/index.html
@@ -4,7 +4,6 @@
   <title>hello world</title>
   <meta charset="utf-8">
   <!-- Global site tag (gtag.js) - Google Analytics -->
-<script async src="https://www.googletagmanager.com/gtag/js?id=UA-77506783-3"></script>
 <script>
   window.dataLayer = window.dataLayer || [];
   function gtag(){dataLayer.push(arguments);}
@@ -12,6 +11,12 @@
 
   gtag('config', 'UA-77506783-3');
 </script>
+  <style>
+    a {
+      color:darkgray;
+      text-decoration: none;
+    }
+  </style>
 </head>
 <body>
   <h1><a href="index.html">WEBn practice</a></h1>
